<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.idporten.seid2</groupId>
    <artifactId>idporten-seid2-certificate-validator</artifactId>
    <version>DEV-SNAPSHOT</version>

    <name>idporten-seid2-certificate-validator</name>

    <properties>
        <java.version>11</java.version>
        <eid.certvalidator.version>0.0.2</eid.certvalidator.version>
        <eid-certificate-generator.version>1.0.1</eid-certificate-generator.version>
        <junit-jupiter-version>5.9.0</junit-jupiter-version>
        <surefire.plugin.version>2.22.2</surefire.plugin.version>
        <allure.cmd.download.url>https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline
        </allure.cmd.download.url>
        <allure.version>2.19.0</allure.version>
        <allure.report.version>2.4.1</allure.report.version>
        <allure.maven.version>2.11.2</allure.maven.version>
        <mockito-junit-jupiter.version>4.7.0</mockito-junit-jupiter.version>
        <mockito-core.version>4.7.0</mockito-core.version>
    </properties>

    <dependencies>
        <!-- Runtime dependencies - please keep this library small -->
        <dependency>
            <groupId>no.digdir.eid</groupId>
            <artifactId>eid-certvalidator</artifactId>
            <version>${eid.certvalidator.version}</version>
        </dependency>
        <!-- COMPILE dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>compile</scope>
        </dependency>
        <!-- TEST dependencies -->
        <dependency>
            <groupId>no.digdir.eid</groupId>
            <artifactId>eid-certificate-generator</artifactId>
            <version>${eid-certificate-generator.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito-junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>${allure.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemProperties>
                        <property>
                            <name>junit.jupiter.extensions.autodetection.enabled</name>
                            <value>true</value>
                        </property>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemProperties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
                <configuration>
                    <reportVersion>${allure.report.version}</reportVersion>
                </configuration>
            </plugin>

        </plugins>
    </build>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>github</id>
            <name>GitHub felleslosninger Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/felleslosninger/.github</url>
        </repository>
    </repositories>

</project>
